--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
     <meta name="description" content="Minecraft game clone on JS">
     <meta name="keywords" content="MadCraft, WebCraft, Minecraft, WebGL, WebGPU, Javascript">
     <!-- social card -->
-    <meta property="og:site_name" content="MadCraft">
-    <meta property="og:description" content="Minecraft game clone on JS">
+    <meta property="og:site_name" content="Shkolakola">
+    <meta property="og:description" content="MadCraft - minecraft in browser">
     <meta property="og:type" content="website">
     <% if( typeof(world) != 'undefined') {%>
     <meta property="og:title" content="<%= page.title %>" />
@@ -25,7 +25,7 @@
     <% } %>
     <!-- twitter card -->
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="MadCraft - JS game in browser">
+    <meta property="twitter:title" content="MadCraft - minecraft in browser">
     <meta property="twitter:url" content="<%= page.domain %>">
     <meta property="twitter:image" content="<%= page.domain %>/media/card.webp">
 	<!-- Design3 -->
