--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Minecraft game clone on JS">
-    <meta name="keywords" content="MadCraft, WebCraft, Minecraft, WebGL, WebGPU, Javascript">
+    <meta name="keywords" content="Shkolakola, Minecraft, WebGL, WebGPU, Javascript">
     <!-- social card -->
     <meta property="og:site_name" content="Shkolakola">
-    <meta property="og:description" content="MadCraft - minecraft in browser">
+    <meta property="og:description" content="Shkolakola — Educational Metaverse">
     <meta property="og:type" content="website">
     <% if( typeof(world) != 'undefined') {%>
     <meta property="og:title" content="<%= page.title %>" />
@@ -25,7 +25,7 @@
     <% } %>
     <!-- twitter card -->
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="MadCraft - minecraft in browser">
+    <meta property="twitter:title" content="Shkolakola — Educational Metaverse">
     <meta property="twitter:url" content="<%= page.domain %>">
     <meta property="twitter:image" content="<%= page.domain %>/media/card.webp">
 	<!-- Design3 -->
